--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "batna-backend",
   "version": "1.0.0",
-  "description": "",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -17,5 +15,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "engines": { "node": ">=18" }
 }
